<resources>
    <string name="app_name">SweedVersiontwo</string>
    <string name="where_you_belong_string">BE WHERE YOU BELONG</string>
    <string name="skip_string">Skip</string>
    <string name="terms_and_conditions_string">Terms &#38; Conditions</string>
    <string name="privacy_policy_string">Privacy Policy</string>
    <string name="login_with_facebook_string"> Log in with Facebook</string>
    <string name="facebook_app_id">760906314089638</string>
    <string name="fb_login_protocol_scheme">fb760906314089638</string>
    <string name="facebook_token">facebook_token</string>
    <string name="openid_offline_access">offline_access</string>
    <string name="facebookPostTokenAuth">Basic bXZjOm15dXNlcnNlY3JldA==</string>
    <string name="camera_permission_title">Always near the party</string>
    <string name="camera_permission_message">Take photos and make videos. Can you activate \nthe camera for us?</string>
    <string name="location_permission_title">Always near the party!</string>
    <string name="location_permission_message">Get notified about events in the \nnearby locations. Can you activate \nthe location for us?</string>
    <string name="camera_permission_deny">No, I prefer the silence!</string>
    <string name="agree_to_permission">YES, PLEASE!</string>
    <string name="location_permission_deny">No, keep me off radar!</string>
    <string name="event_realm_string">Events</string>
    <string name="camera_string">Camera</string>
    <string name="my_profile_string">Profile</string>
    <string name="about_string">ABOUT</string>
    <string name="feed_string">FEED</string>
    <string name="not_logged_dialog_title_string">Facebook</string>
    <string name="alert_dialog_close_string">CLOSE</string>
    <string name="alert_dialog_login_string">LOGIN</string>
    <string name="alert_dialog_message_string">You can\'t access this area of the app until you log in</string>
    <string name="people_are_attending_string"> People are attending</string>
    <string name="google_maps_api_key_string">AIzaSyDBLddRKxvs_rH9Z5I76mdRuto0xGk6fns</string>
    <string name="compose_message_here_string">Compose message here</string>
    <string name="recent_activity_text_string">RECENT ACTIVITY</string>
    <string name="login_to_see_comments_string">Login to see what\'s happening at this event</string>
    <string name="your_events_title_string">Your Events</string>
</resources>